--- a/.github/workflows/lint-models.yml
+++ b/.github/workflows/lint-models.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   lint_dbt:
-    name: Test Tap connectivity and Configuration
+    name: Lint SQL models using SQLFluff
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
@@ -22,7 +22,9 @@ jobs:
           architecture: x64
 
       - name: Install Dependencies
-        run: pip install poetry==1.1.5
+        run: |
+          pip install poetry==1.1.5
+          poetry install
 
       - name: Lint models
         run: |
