--- a/.github/workflows/lint-models.yml
+++ b/.github/workflows/lint-models.yml
@@ -28,4 +28,6 @@ jobs:
 
       - name: Lint models
         run: |
+          mkdir ~/.dbt/
+          cp profiles.yml ~/.dbt/profiles.yml
           make lint
