--- a/profiles.yml
+++ b/profiles.yml
@@ -12,7 +12,7 @@ dbt_sqlite:
       threads: 1
       database: database
       schema: main
-      schemas_and_paths: >
-        main={{ env_var('PWD') }}/dbs/etl.db;
-        dataset={{ env_var('PWD') }}/dbs/dataset.db
+      schemas_and_paths:
+        main: "{{ env_var('PWD') }}/dbs/etl.db"
+        dataset: "{{ env_var('PWD') }}/dbs/dataset.db"
       schema_directory: "{{ env_var('PWD') }}/dbs"
