--- a/models/sources/datasets.yml
+++ b/models/sources/datasets.yml
@@ -1,8 +1,14 @@
 version: 2
 
 sources:
-  - name: etl
-    schema: main
-    description: Test
+  - name: retail
+    tags: [kaggle]
+    loader: SQLite CLI
+    schema: dataset
+    description: Retail Store Sales Transactions (Scanner Data)
     tables:
       - name: scanner_data
+        description: >
+          Detailed data on sales of consumer goods obtained by ‘scanning’ the
+          bar codes for individual products at electronic points of sale in a
+          retail store.
