ci: remove Python 3.7 from test matrix

--- a/.github/workflows/lint-models.yml
+++ b/.github/workflows/lint-models.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ['3.7', '3.8']
+        python-version: ['3.8']
 
     steps:
       - name: Checkout code
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install poetry==1.1.5
+          pip install poetry==1.1.11
           poetry install
 
       - name: Lint models
