--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ sqlfluff = "^0.12.0"
 sqlfluff-templater-dbt = "^0.12.0"
 
 [tool.sqlfluff.core]
+dialect = "sqlite"
 templater = "dbt"
 
 [tool.sqlfluff.rules]
