--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,11 @@ authors = ["Edgar Ramírez Mondragón <edgarrm358@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 kaggle = "^1.5.12"
-dbt-core = {version = "^1.2.1", allow-prereleases = true}
-dbt-sqlite = "^1.1.3"
+dbt-core = {version = "^1.3.0b2", allow-prereleases = true}
+dbt-sqlite = {version = "^1.2.0a2", allow-prereleases = true}
 
 [tool.poetry.dev-dependencies]
-sqlfluff = "^1.2.1"
+sqlfluff = "^1.3.0"
 sqlfluff-templater-dbt = "^1"
 
 [tool.sqlfluff.core]
