--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,9 +5,37 @@
 
 version: 2
 updates:
-  - package-ecosystem: "pip" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "pip"
+    directory: "/"
+    schedule:
+      interval: daily
+      time: "14:38"
+      timezone: "America/Mexico_City"
+    reviewers:
+      - "edgarrmondragon"
+    labels:
+      - "dependencies"
+    allow:
+      - dependency-type: "development"
+  - package-ecosystem: pip
+    directory: "/.github/workflows"
+    schedule:
+      interval: daily
+      time: "14:38"
+      timezone: "America/Mexico_City"
+    reviewers:
+      - "edgarrmondragon"
+    labels:
+      - "dependencies"
+  - package-ecosystem: github-actions
+    directory: "/"
+    schedule:
+      interval: weekly
+    reviewers:
+      - "edgarrmondragon"
+  - package-ecosystem: docker
+    directory: "/"
     schedule:
       interval: "daily"
     reviewers:
-      - edgarrmondragon
+      - "edgarrmondragon"
